fixed img on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,14 @@ body{
    margin:0 auto;  
   }
 
+  a {
+    color: black;
+    font-weight: bolder;
+    position: fixed;
+    padding-right: 10px;
+    text-align: center;
+  }
+
 button {
     border-radius: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -12,14 +20,6 @@ button {
    .container {
     text-align: center;
   }    
-
-  a {
-    color: black;
-    font-weight: bolder;
-    position: fixed;
-    padding-right: 10px;
-    text-align: center;
-  }
 
   .gif-array-button{
     background-color: black;
@@ -33,13 +33,12 @@ button {
   }
 
   header {
-    position: absolute;
     margin-bottom:10px;
-   
     left: 20px;
   }
 
   .input-header {
+    padding: 10px;
     font-family: cursive;
     font-weight: bold; 
   }
@@ -55,15 +54,11 @@ button {
   }
  
 
- 
- 
-
-
 /* Smartphones (portrait and landscape) -----------*/
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 /* Styles */
 
-img {
+#gif-img {
   max-width: 250px;
 }
 }
